[tool.poetry]
name = "rhub-cli"
version = "0.1"
description = "A client library for accessing Resource Hub"

authors = []

readme = "README.md"
packages = [
    {include = "rhub_cli"},
]
include = ["CHANGELOG.md", "rhub_cli/py.typed"]

[tool.poetry.dependencies]
python = "^3.6"
httpx = ">=0.15.4,<0.22.0"
attrs = ">=20.1.0,<22.0.0"
python-dateutil = "^2.8.0"
click = "^8.0.3"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
rhub_cli = 'rhub_cli.cli_main:cli'

[tool.black]
line-length = 120
target_version = ['py36', 'py37', 'py38']
exclude = '''
(
  /(
    | \.git
    | \.venv
    | \.mypy_cache
  )/
)
'''

[tool.isort]
line_length = 120
profile = "black"